syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_register_trader.proto";
import "rpc_login_trader.proto";

option go_package = "peerbill-trader-server/pb";

service PeerBillTrader {
    rpc RegisterTrader (RegisterTraderRequest) returns (RegisterTraderResponse) {
        option (google.api.http) = {
            post: "/api/v1/register-trader"
            body: "*"
        };
    }
    rpc LoginTrader (LoginTraderRequest) returns (LoginTraderResponse) {
        option (google.api.http) = {
            post: "/api/v1/login-trader"
            body: "*"
        };
    }
}