syntax = "proto3";

package pb;

import "trader.proto";

option go_package = "peerbill-trader-server/pb";

message RegisterTraderRequest {
    string        first_name = 1;
    string        last_name = 2;
    string        username = 3;
    string        email = 4;
    string        country = 5;
    string        phone = 6;
    string        password = 7;
}

message RegisterTraderResponse {
    Trader trader = 1;
}